--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       --fg: #f5f5f5;
       --accent: #c28f42;
     }
+    * {
+      box-sizing: border-box;
+    }
     body {
       background: var(--bg);
       color: var(--fg);
@@ -33,7 +36,7 @@
       margin: 0;
       color: var(--accent);
     }
-    form {
+    form, .edit-form {
       display: flex;
       flex-direction: column;
       gap: 0.75rem;
@@ -53,6 +56,7 @@
       background: var(--accent);
       color: #000;
       font-weight: bold;
+      cursor: pointer;
     }
     .preview-img {
       max-width: 100%;
@@ -63,7 +67,7 @@
     .log-container {
       display: grid;
       grid-template-columns: 1fr;
-      gap: 1.5rem;
+      gap: 2rem;
     }
     @media (min-width: 600px) {
       .log-container {
@@ -71,58 +75,50 @@
       }
     }
 
-    /* Card Flip Styles */
     .card-wrapper {
-      perspective: 1000px;
+      display: flex;
+      justify-content: center;
     }
+
     .card {
       width: 225px;
       height: 300px;
-      margin: auto;
-      position: relative;
-      transform-style: preserve-3d;
-      transition: transform 0.6s;
-    }
-    .card.flipped {
-      transform: rotateY(180deg);
-    }
-    .card-side {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
+      background: #000;
       border-radius: 12px;
+      overflow: hidden;
       box-shadow: 0 0 10px rgba(0,0,0,0.4);
     }
-    .card-front {
-      background: #000;
+
+    .bean-card {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
-    .card-back {
-      background: #2a2a2a;
-      transform: rotateY(180deg);
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 1rem;
-      box-sizing: border-box;
-      text-align: left;
+
+    .card-details {
+      padding: 1rem 0.5rem 0.5rem;
+      text-align: center;
     }
-    .card-back h3 {
-      margin-top: 0;
+
+    .card-details h3 {
+      margin: 0;
+      font-size: 1rem;
       color: var(--accent);
     }
-    .card-back button {
-      margin-top: 1rem;
-      background: #444;
-      color: white;
+
+    .edit-view {
+      display: none;
+      flex-direction: column;
+      gap: 1rem;
+      padding: 1rem;
     }
-    .edit-form input, .edit-form textarea, .edit-form select {
+
+    .hidden {
+      display: none !important;
+    }
+
+    .full-width {
       width: 100%;
-      margin-bottom: 0.5rem;
-    }
-    .edit-form {
-      margin-top: 1rem;
     }
   </style>
 </head>
@@ -132,43 +128,52 @@
     <h1>BeanVault ☕</h1>
   </header>
 
-  <form id="coffeeForm">
-    <input type="text" id="coffeeName" placeholder="Coffee Name" required />
-    <input type="text" id="roaster" placeholder="Roaster" />
-    <input type="text" id="origin" placeholder="Origin (e.g., Ethiopia)" required />
-    <select id="brewMethod">
-      <option value="">Select Brew Method</option>
-      <option>Pour-Over</option>
-      <option>Espresso</option>
-      <option>Drip</option>
-      <option>French Press</option>
-      <option>AeroPress</option>
-      <option>Cold Brew</option>
-    </select>
-    <select id="rating">
-      <option value="">Rating</option>
-      <option>☕</option>
-      <option>☕☕</option>
-      <option>☕☕☕</option>
-      <option>☕☕☕☕</option>
-      <option>☕☕☕☕☕</option>
-    </select>
-    <textarea id="notes" placeholder="Tasting notes, vibe, etc."></textarea>
-    <label>
-      <input type="checkbox" id="buyAgain" />
-      Would Buy Again?
-    </label>
-    <input type="file" id="imageUpload" accept="image/*" />
-    <img id="preview" class="preview-img" style="display:none;" />
-    <button type="submit">Add Coffee</button>
-  </form>
+  <!-- Main View -->
+  <div id="mainView">
+    <form id="coffeeForm">
+      <input type="text" id="coffeeName" placeholder="Coffee Name" required />
+      <input type="text" id="roaster" placeholder="Roaster" />
+      <input type="text" id="origin" placeholder="Origin (e.g., Ethiopia)" required />
+      <select id="brewMethod">
+        <option value="">Select Brew Method</option>
+        <option>Pour-Over</option>
+        <option>Espresso</option>
+        <option>Drip</option>
+        <option>French Press</option>
+        <option>AeroPress</option>
+        <option>Cold Brew</option>
+      </select>
+      <select id="rating">
+        <option value="">Rating</option>
+        <option>☕</option>
+        <option>☕☕</option>
+        <option>☕☕☕</option>
+        <option>☕☕☕☕</option>
+        <option>☕☕☕☕☕</option>
+      </select>
+      <textarea id="notes" placeholder="Tasting notes, vibe, etc."></textarea>
+      <label>
+        <input type="checkbox" id="buyAgain" />
+        Would Buy Again?
+      </label>
+      <input type="file" id="imageUpload" accept="image/*" />
+      <img id="preview" class="preview-img" style="display:none;" />
+      <button type="submit">Add Coffee</button>
+    </form>
 
-  <div id="logContainer" class="log-container"></div>
+    <div id="logContainer" class="log-container"></div>
+  </div>
+
+  <!-- Edit View -->
+  <div id="editView" class="edit-view"></div>
     <script>
     const form = document.getElementById('coffeeForm');
     const preview = document.getElementById('preview');
     const logContainer = document.getElementById('logContainer');
+    const mainView = document.getElementById('mainView');
+    const editView = document.getElementById('editView');
     let uploadedImageData = '';
+    let editingIndex = null;
 
     document.getElementById('imageUpload').addEventListener('change', function () {
       const file = this.files[0];
@@ -194,121 +199,80 @@
       reader.readAsDataURL(file);
     });
 
-    async function renderBeanCard(entry, index) {
-      return new Promise((resolve) => {
-        const canvas = document.createElement('canvas');
-        const ctx = canvas.getContext('2d');
-        const CARD_WIDTH = 450;
-        const CARD_HEIGHT = 600;
-        canvas.width = CARD_WIDTH;
-        canvas.height = CARD_HEIGHT;
+    function renderCard(entry, index) {
+      const wrapper = document.createElement('div');
+      wrapper.className = 'card-wrapper';
 
-        const img = new Image();
-        img.onload = () => {
-          const cropX = img.width * 0.1;
-          const cropY = img.height * 0.1;
-          const cropW = img.width * 0.8;
-          const cropH = img.height * 0.8;
-          ctx.drawImage(img, cropX, cropY, cropW, cropH, 0, 0, CARD_WIDTH, CARD_HEIGHT);
+      const card = document.createElement('div');
+      card.className = 'card';
 
-          ctx.fillStyle = 'rgba(0,0,0,0.6)';
-          ctx.fillRect(0, CARD_HEIGHT - 100, CARD_WIDTH, 100);
+      const image = document.createElement('img');
+      image.src = entry.image;
+      image.className = 'bean-card';
 
-          ctx.fillStyle = 'white';
-          ctx.font = 'bold 28px Arial';
-          ctx.fillText(entry.name, 20, CARD_HEIGHT - 65);
+      const details = document.createElement('div');
+      details.className = 'card-details';
+      details.innerHTML = `
+        <h3>${entry.name}</h3>
+        <p>${entry.origin}</p>
+        <p>${entry.method} | ${entry.rating}</p>
+        <p>${entry.notes || ''}</p>
+        <p>${entry.buyAgain ? '✅' : '❌'} Would Buy Again</p>
+        <button onclick="editCard(${index})" class="full-width">Edit</button>
+      `;
 
-          ctx.font = '18px Arial';
-          ctx.fillText(entry.origin, 20, CARD_HEIGHT - 40);
-          ctx.fillText(entry.method + " | " + entry.rating, 20, CARD_HEIGHT - 20);
+      card.appendChild(image);
+      card.appendChild(details);
+      wrapper.appendChild(card);
+      return wrapper;
+    }
 
-          resolve(canvas.toDataURL());
-        };
-        img.src = entry.image;
+    function loadLog() {
+      const log = JSON.parse(localStorage.getItem('coffeeLog') || '[]');
+      logContainer.innerHTML = '';
+      log.reverse().forEach((entry, i) => {
+        const actualIndex = log.length - 1 - i;
+        const card = renderCard(entry, actualIndex);
+        logContainer.appendChild(card);
       });
     }
 
-    async function loadLog() {
-      const log = JSON.parse(localStorage.getItem('coffeeLog') || '[]');
-      logContainer.innerHTML = '';
-      for (let i = log.length - 1; i >= 0; i--) {
-        const entry = log[i];
-        const image = await renderBeanCard(entry, i);
-
-        const wrapper = document.createElement('div');
-        wrapper.className = 'card-wrapper';
-
-        const card = document.createElement('div');
-        card.className = 'card';
-        card.onclick = () => card.classList.toggle('flipped');
-
-        const front = document.createElement('div');
-        front.className = 'card-side card-front';
-        const frontImg = new Image();
-        frontImg.src = image;
-        frontImg.className = 'bean-card';
-        front.appendChild(frontImg);
-
-        const back = document.createElement('div');
-        back.className = 'card-side card-back';
-        back.innerHTML = `
-          <h3>${entry.name}</h3>
-          <p><strong>Origin:</strong> ${entry.origin}</p>
-          <p><strong>Brew:</strong> ${entry.method}</p>
-          <p><strong>Rating:</strong> ${entry.rating}</p>
-          <p><strong>Roaster:</strong> ${entry.roaster || '-'}</p>
-          <p><strong>Notes:</strong> ${entry.notes || '-'}</p>
-          <p><strong>Buy Again:</strong> ${entry.buyAgain ? '✅' : '❌'}</p>
-          <button onclick="editEntry(${i})">Edit</button>
-        `;
-
-        card.appendChild(front);
-        card.appendChild(back);
-        wrapper.appendChild(card);
-        logContainer.appendChild(wrapper);
-      }
-    }
-
-    function editEntry(index) {
+    function editCard(index) {
       const log = JSON.parse(localStorage.getItem('coffeeLog') || '[]');
       const entry = log[index];
+      editingIndex = index;
 
-      const card = document.querySelectorAll('.card')[log.length - 1 - index];
-      const back = card.querySelector('.card-back');
-      back.innerHTML = `
-        <h3>Edit: ${entry.name}</h3>
-        <form class="edit-form" onsubmit="saveEdit(event, ${index})">
+      mainView.classList.add('hidden');
+      editView.classList.remove('hidden');
+      editView.innerHTML = `
+        <h2>Edit Coffee</h2>
+        <form onsubmit="saveEdit(event)" class="edit-form">
           <input type="text" name="name" value="${entry.name}" required />
           <input type="text" name="origin" value="${entry.origin}" required />
           <input type="text" name="roaster" value="${entry.roaster || ''}" />
           <select name="method" required>
-            <option ${entry.method === 'Pour-Over' ? 'selected' : ''}>Pour-Over</option>
-            <option ${entry.method === 'Espresso' ? 'selected' : ''}>Espresso</option>
-            <option ${entry.method === 'Drip' ? 'selected' : ''}>Drip</option>
-            <option ${entry.method === 'French Press' ? 'selected' : ''}>French Press</option>
-            <option ${entry.method === 'AeroPress' ? 'selected' : ''}>AeroPress</option>
-            <option ${entry.method === 'Cold Brew' ? 'selected' : ''}>Cold Brew</option>
+            ${['Pour-Over','Espresso','Drip','French Press','AeroPress','Cold Brew'].map(opt => `
+              <option ${opt === entry.method ? 'selected' : ''}>${opt}</option>`).join('')}
           </select>
           <select name="rating" required>
-            <option ${entry.rating === '☕' ? 'selected' : ''}>☕</option>
-            <option ${entry.rating === '☕☕' ? 'selected' : ''}>☕☕</option>
-            <option ${entry.rating === '☕☕☕' ? 'selected' : ''}>☕☕☕</option>
-            <option ${entry.rating === '☕☕☕☕' ? 'selected' : ''}>☕☕☕☕</option>
-            <option ${entry.rating === '☕☕☕☕☕' ? 'selected' : ''}>☕☕☕☕☕</option>
+            ${['☕','☕☕','☕☕☕','☕☕☕☕','☕☕☕☕☕'].map(opt => `
+              <option ${opt === entry.rating ? 'selected' : ''}>${opt}</option>`).join('')}
           </select>
           <textarea name="notes">${entry.notes || ''}</textarea>
-          <label><input type="checkbox" name="buyAgain" ${entry.buyAgain ? 'checked' : ''} /> Buy Again?</label>
+          <label><input type="checkbox" name="buyAgain" ${entry.buyAgain ? 'checked' : ''}/> Would Buy Again?</label>
           <button type="submit">Save</button>
+          <button type="button" onclick="cancelEdit()" style="background:#444;color:white;">Cancel</button>
         </form>
       `;
     }
 
-    function saveEdit(event, index) {
-      event.preventDefault();
-      const form = event.target;
+    function saveEdit(e) {
+      e.preventDefault();
+      const form = e.target;
       const log = JSON.parse(localStorage.getItem('coffeeLog') || '[]');
-      log[index] = {
-        ...log[index],
+
+      log[editingIndex] = {
+        ...log[editingIndex],
         name: form.name.value.trim(),
         origin: form.origin.value.trim(),
         roaster: form.roaster.value.trim(),
@@ -317,8 +281,18 @@
         notes: form.notes.value.trim(),
         buyAgain: form.buyAgain.checked
       };
+
       localStorage.setItem('coffeeLog', JSON.stringify(log));
+      editingIndex = null;
+      editView.classList.add('hidden');
+      mainView.classList.remove('hidden');
       loadLog();
+    }
+
+    function cancelEdit() {
+      editingIndex = null;
+      editView.classList.add('hidden');
+      mainView.classList.remove('hidden');
     }
 
     form.addEventListener('submit', async e => {
@@ -352,7 +326,7 @@
         form.reset();
         uploadedImageData = '';
         preview.style.display = 'none';
-        await loadLog();
+        loadLog();
       } catch (err) {
         console.error('Failed to add coffee:', err);
         alert('Something went wrong while saving. Try again.');
